# pre-commit-hook-text-include

./: .pre-commit-hooks.yaml  Dockerfile  README.md  check_text_include.py  setup.cfg
check_text_include/: check_text_include.py
examples/: .pre-commit-config.yaml
