[metadata]
name = text-include
version = 0.0.1
description = Pre-commit hooks to include 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ad-m/text-include
author = Adam Dobrawy
author_email = naczelnik@jawnosc.tk
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    check-text-include = check_text_include.check_text_include:main

[bdist_wheel]
universal = True